fix main character image alignment and remove un-needed class

--- a/src/resources/assets/css/seat.css
+++ b/src/resources/assets/css/seat.css
@@ -101,3 +101,7 @@ ul.dropdown-menu li.user-character.new-character a h3 {
 .bg-none {
     background: none;
 }
+
+.align-middle {
+    vertical-align: middle !important;
+}
